Correct use of <code> in JavaDOC